Modifications for gaussian/cylindrical quantum dots.
- basis_fns.f90
  -------------
  "basis_fns_2dgauss", "deriv_2dgauss" subroutines have been heavily modified.
  The normalization factor used in 2-dimensional localized gaussian basis sets
  and the derivatives with respect to the parameters have been corrected.

  The old subroutines (if one needs to use them) have been renamed as
  "basis_fns_2dgauss_old" and "deriv_2dgauss_old".

  Now, the subroutines use the absolute positions of the electrons (nothing is
  changed for the case of a single quantum dot at the origin).

- basis_norm.f90
  --------------
  The normalization factor has been modified for 2-dimensional localized
  gaussian basis sets (ibasis=4).

- den2dwrt.f90
  ------------
  Grid write statements have been modified according to changes in the pair
  density calculations.

- distances.f90
  -------------
  Cylindrical and gaussian quantum dot potentials have been added. Quadratic
  gate potential has been added for gaussian quantum dot potential.

- dmc_good_ps_mov1.f90
  --------------------
  nloc=-6 and nloc=-7 functionality have been added in order to use dmc_good
  subroutine with them.

- makefile.inc
  ------------
  For gcc versions > 10, "-fallow-argument-mismatch" flag is added.

- pairden2d.f90
  -------------
  Pair density calculations have been revamped. In the beginning of the old
  algorithm, the reference electrons were rotated in order to test whether they
  are inside the fixed mesh point or not. Now, the fixed mesh points (and all of
  its symmetry points) are calculated in advance (in read_input.f90), and
  reference electrons are tested with simple if statements instead of rotations.
  This procedure removes the extra rotation calculations at the beginning of the
  old algorithm for all reference electrons. However, those rotations in the old
  algorithm were advantageous to use the circular symmetry entirely. In order to
  mimic that behavior, one needs to use a very small

--- a/makefile.inc
+++ b/makefile.inc
@@ -50,8 +50,10 @@ CC_MPI_FLAGS=$(CC_FLAGS)
 # Fortran compilation ------------------------------------------------------
 
 # These are defaults using the gfortran
-F95=gfortran
-F95_MPI=mpif90
+# F95=gfortran
+# F95_MPI=mpif90
+F95=gfortran -fallow-argument-mismatch # for gcc versions > 10
+F95_MPI=mpif90 -fallow-argument-mismatch # for gcc versions > 10
 
 # F95_FAST_FLAGS= -zero -r8 -pad -align all -fpp -ip -O3
 #F95_FAST_FLAGS=-finit-local-zero -O3 -ffree-line-length-none -x f95-cpp-input -Wall  -DNOEINSPLINE
